# C-Pico_Wifi_Monitor

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh
src/: main.c
src/include/: password_template.h
src/include/pico_usb_console/: protocol.h  serial.h
src/include/pico_usb_console/config/: tusb_config.h
src/pico_usb_console/: descriptor.c  protocol.c  serial.c
